[gd_scene load_steps=4 format=3 uid="uid://b74m623ogq64g"]

[ext_resource type="Script" uid="uid://bt2tepy3mv1qf" path="res://Global/pause_menu.gd" id="1_hdmo1"]
[ext_resource type="PackedScene" uid="uid://baiulecik0fib" path="res://Sounds/volume_slider.tscn" id="2_nwcfo"]

[sub_resource type="AudioStream" id="AudioStream_nwcfo"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="Panel" type="PanelContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 354.0
offset_top = 60.0
offset_right = 673.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BackToMain" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back to Main"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Quit"

[node name="VolumeSlider" parent="." instance=ExtResource("2_nwcfo")]
top_level = true
layout_mode = 0
offset_left = 426.0
offset_top = 164.0
offset_right = 601.0
offset_bottom = 209.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VolumeSlider"]
position = Vector2(0, -188)
stream = SubResource("AudioStream_nwcfo")

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackToMain" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
